--- a/capcut.html
+++ b/capcut.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CapCut Clone Project - Home</title>
   <link rel="stylesheet" href="capstyle.css">
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="lola"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -240,6 +240,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="capscript.js"></script>
 </body>
 </html>
