--- a/capcut.html
+++ b/capcut.html
@@ -29,7 +29,6 @@
       </ul>
     </nav>
 
-
       <div class="help-icon">
         <button class="help-button" title="Help">
             <span class="help-icon-text">?</span>
@@ -212,7 +211,6 @@
 
 
 
-
 <div class = "speech2-section">
   <div class="speech2-wrapper">
     <div class="speech2-content">
@@ -232,11 +230,20 @@
    
   <footer>
     <p>&copy; 2025 CapClone Inc. All rights reserved.</p>
+
     <div class="social-icons">
-      <a href="assets/facebook.png"><i class="fab fa-facebook"></i></a>
-      <a href="assets/Twitter.png"><i class="fab fa-twitter"></i></a>
-      <a href="assets/INSTAGRAM.jpg"><i class="fab fa-instagram"></i></a>
-      <a href="assets/Youtube.png"><i class="fab fa-youtube"></i></a>
+      <a href="https://facebook.com" target="_blank">
+        <img src="assets/FACEBOOK (2).png" alt="Facebook" width="30">
+      </a>
+      <a href="https://twitter.com" target="_blank">
+        <img src="assets/TWITTER.jpg" alt="Twitter" width="30">
+      </a>
+      <a href="https://instagram.com" target="_blank">
+        <img src="assets/INSTAGRAM.jpg" alt="Instagram" width="30">
+      </a>
+      <a href="https://youtube.com" target="_blank">
+        <img src="assets/Youtube.png" alt="YouTube" width="30">
+      </a>
     </div>
   </footer>
 
